Fix resume spacing

--- a/styles/resume.css
+++ b/styles/resume.css
@@ -3,14 +3,14 @@
 }
 
 #pageContent {
-    margin: 5px;
-    margin-top: 10px;
+    margin: 55px;
+    margin-top: 30px;
     padding: 10px;
     padding-bottom: 70px;
 }
 
 #wrapper {
-    width: 930px;
+    width: 1030px;
 }
 
 #pageContent .resume_content {
